tests/ui/extern_type_lifetime_bound.stderr
error: lifetime parameter with bounds is not supported yet
 --> tests/ui/extern_type_lifetime_bound.rs:4:26
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         type Complex<'a, 'b: 'a>;
  |                          ^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
